force-app/main/default/objects/WSParamCompaneo__mdt/WSParamCompaneo__mdt.object-meta.xml
<CustomObject>
    <description>Methodes décrivant les appels web services type Campaneo</description>
    <label>WS Param Companeo</label>
    <pluralLabel>WS Params Companeo</pluralLabel>
</CustomObject>