force-app/main/default/objects/WSParamCompaneo__mdt/fields/Parametres__c.field-meta.xml
<CustomField>
    <fullName>Parametres__c</fullName>
    <label>Paramètres</label>
    <length>100</length>
    <type>Text</type>
</CustomField>