force-app/main/default/objects/WSParamCompaneo__mdt/fields/WSEndpoint__c.field-meta.xml
<CustomField>
    <fullName>WSEndpoint__c</fullName>
    <label>WS Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>